jalv (9999) unstable;

  * Tune UI update rate and ring size based on JACK rate and MIDI buffer size
    to handle the handle the maximum message rate the plugin can send.
  * Support lv2:sampleRate control ports.
  * Tolerate loading presets with port values that aren't xsd:decimal

 -- David Robillard <d@drobilla.net>

jalv (1.0.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Thu, 19 Apr 2012 18:42:42 -0400
