@@ -4,6 +4,8 @@ jalv (9999) unstable;
     to handle the handle the maximum message rate the plugin can send.
   * Support lv2:sampleRate control ports.
   * Tolerate loading presets with port values that aren't xsd:decimal
+  * Notify plugins of Jack transport changes by sending events (an atom:Blank
+    with properties from the LV2 time extension)
 
  -- David Robillard <d@drobilla.net>
 
